QmlCompiler: Consider attached types for "unused import" detection

Pick-to: 6.5
Fixes: QTBUG-110833
Change-Id: Ie766c957a9ebeaea808fdc6904a1caea0e4cb849
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>