tests/auto/qml/qmllint/data/attachedImportUse.qml
@@ -1,0 +1,7 @@
+import QtQml
+import TestTypes
+
+QtObject {
+    id: control
+    objectName: control.BirthdayParty.objectName
+}
