tests/auto/qml/qmllint/tst_qmllint.cpp
@@ -1216,6 +1216,7 @@ void TestQmllint::cleanQmlCode_data()
     QTest::newRow("propertyWithOn") << QStringLiteral("switcher.qml");
     QTest::newRow("constructorProperty") << QStringLiteral("constructorProperty.qml");
     QTest::newRow("onlyMajorVersion") << QStringLiteral("onlyMajorVersion.qml");
+    QTest::newRow("attachedImportUse") << QStringLiteral("attachedImportUse.qml");
 }
 
 void TestQmllint::cleanQmlCode()
